// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component Should match snapshot with different skins 1`] = `
<div
  className="Badge__Wrapper-o4eu03-0 hJqOXp"
>
   
   Brand1 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 2`] = `
<div
  className="Badge__Wrapper-o4eu03-0 bhTlEX"
>
   
   Brand2 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 3`] = `
<div
  className="Badge__Wrapper-o4eu03-0 hWuITi"
>
   
   Primary 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 4`] = `
<div
  className="Badge__Wrapper-o4eu03-0 eodmzi"
>
   
   Secondary 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 5`] = `
<div
  className="Badge__Wrapper-o4eu03-0 fAYuzf"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 6`] = `
<div
  className="Badge__Wrapper-o4eu03-0 bUNrWI"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 7`] = `
<div
  className="Badge__Wrapper-o4eu03-0 jtiMdQ"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 8`] = `
<div
  className="Badge__Wrapper-o4eu03-0 jtlTmS"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 9`] = `
<div
  className="Badge__Wrapper-o4eu03-0 cQpuvR"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different text props 1`] = `
<div
  className="Badge__Wrapper-o4eu03-0 hWuITi"
>
   
  Default with text prop
   
</div>
`;

exports[`Badge component Should match snapshot with different text props 2`] = `
<div
  className="Badge__Wrapper-o4eu03-0 hWuITi"
>
   
   Default with children 
   
</div>
`;

exports[`Badge component Should match snapshot with different text props 3`] = `
<div
  className="Badge__Wrapper-o4eu03-0 hWuITi"
>
   
   Default 
   
</div>
`;
